--- a/tesla.html
+++ b/tesla.html
@@ -15,20 +15,36 @@
   <link rel="Shortcut Icon" href="favicon/tesla.ico" type="image/x-icon">
 </head>
 <body>
-<ol>
-  <li>Model 3</li>
-  <li>Model X</li>
-  <li>Model S</li>
-</ol>
-<h2 class="menu">Menu</h2>
-<h2 class="cars">Cars</h2>
-<div class="first button">
-  <section>
-    <a href="https://developer.mozilla.org/en-US/docs/Web/CSS/Shorthand_properties"  class="sticky">
-      <span>Custom Order</span></a>
-    <a href="" class="sticky"></a>
-  </section>
-</div>
+<div>
+  <div>
+    <div>
+    <header>
+    <ul  class="models">
+      <li><a href="https://www.tesla.com/models" title="Model S"></a><span>Model S</span></li>
+      <li><a href="https://www.tesla.com/model3" title="Model 3"></a><span>Model 3</span></li>
+      <li><a href="https://www.tesla.com/modelx" title="Model X"></a><span>Model X</span></li>
+      <li><a href="https://www.tesla.com/modely" title="Model Y"></a><span>Model Y</span></li>
+    </ul>
 
+    <ul class="nav">
+      <li><a href="" title="Shop"><span>Shop</span></a></li>
+      <li><a href="" title="Account"><span>Account</span></a></li>
+      <li><a href="" title="Menu"><span>Menu</span></a></li>
+    </ul>
+    </header>
+    </div>
+  </div>
+  <div>
+    <main>
+      <div>
+        <section class="order menu">
+      <a href="https://developer.mozilla.org/en-US/docs/Web/CSS/Shorthand_properties" class="order">
+        <span class="order">Custom Order</span></a>
+      <a href="" class="sticky"></a>
+    </section>
+      </div>
+    </main>
+  </div>
+</div>
 </body>
 </html>
