Changed html structure

--- a/tesla.html
+++ b/tesla.html
@@ -1,50 +1,46 @@
 <!DOCTYPE html>
 <html lang="en-US">
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width">
-  <title>Electric Cars, Solar &amp; Clean Energy | Tesla</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width">
+    <title>Electric Cars, Solar &amp; Clean Energy | Tesla</title>
 
-  <meta name="author" content="Chris Mills">
-  <meta name="description" content="This is an example page to demonstrate usage of metadata on web pages.">
+    <meta name="author" content="Chris Mills">
+    <meta name="description" content="This is an example page to demonstrate usage of metadata on web pages.">
 
-  <meta property="og:image" content="https://developer.cdn.mozilla.net/static/img/opengraph-logo.dc4e08e2f6af.png">
-  <meta property="og:description" content="This is an example page to demonstrate usage of metadata on web pages.">
-  <meta property="og:title" content="Metadata; The HTML &lt;head&gt;, on MDN">
-  <link rel="stylesheet" href="tesl_css.css">
-  <link rel="Shortcut Icon" href="favicon/tesla.ico" type="image/x-icon">
+    <meta property="og:image" content="https://developer.cdn.mozilla.net/static/img/opengraph-logo.dc4e08e2f6af.png">
+    <meta property="og:description" content="This is an example page to demonstrate usage of metadata on web pages.">
+    <meta property="og:title" content="Metadata; The HTML &lt;head&gt;, on MDN">
+    <link rel="stylesheet" href="tesl_css.css">
+    <link rel="Shortcut Icon" href="favicon/tesla.ico" type="image/x-icon">
 </head>
 <body>
-<div>
-  <div>
-    <div>
-    <header>
-    <ul  class="models">
-      <li><a href="https://www.tesla.com/models" title="Model S"></a><span>Model S</span></li>
-      <li><a href="https://www.tesla.com/model3" title="Model 3"></a><span>Model 3</span></li>
-      <li><a href="https://www.tesla.com/modelx" title="Model X"></a><span>Model X</span></li>
-      <li><a href="https://www.tesla.com/modely" title="Model Y"></a><span>Model Y</span></li>
-    </ul>
+<div class="page">
+    <div class="header">
+        <header>
+            <ul class="models">
+                <li><a href="https://www.tesla.com/models" title="Model S"></a><span>Model S</span></li>
+                <li><a href="https://www.tesla.com/model3" title="Model 3"></a><span>Model 3</span></li>
+                <li><a href="https://www.tesla.com/modelx" title="Model X"></a><span>Model X</span></li>
+                <li><a href="https://www.tesla.com/modely" title="Model Y"></a><span>Model Y</span></li>
+            </ul>
 
-    <ul class="nav">
-      <li><a href="" title="Shop"><span>Shop</span></a></li>
-      <li><a href="" title="Account"><span>Account</span></a></li>
-      <li><a href="" title="Menu"><span>Menu</span></a></li>
-    </ul>
-    </header>
+            <ul class="nav">
+                <li><a href="" title="Shop"><span>Shop</span></a></li>
+                <li><a href="" title="Account"><span>Account</span></a></li>
+                <li><a href="" title="Menu"><span>Menu</span></a></li>
+            </ul>
+        </header>
     </div>
-  </div>
-  <div>
-    <main>
-      <div>
-        <section class="order menu">
-      <a href="https://developer.mozilla.org/en-US/docs/Web/CSS/Shorthand_properties" class="order">
-        <span class="order">Custom Order</span></a>
-      <a href="" class="sticky"></a>
-    </section>
-      </div>
-    </main>
-  </div>
+    <div>
+        <main>
+            <div class="buttons">
+                <a href="https://developer.mozilla.org/en-US/docs/Web/CSS/Shorthand_properties" class="order">
+                    <span class="order">Custom Order</span></a>
+                <a href="" class="sticky"></a>
+            </div>
+        </main>
+    </div>
 </div>
 </body>
 </html>
